--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -33,6 +33,12 @@
 \usepackage{longtable}
 \usepackage{tabu}
 \usepackage{threeparttable}
+\usepackage{threeparttablex}
+\usepackage{setspace}
+\usepackage{etoolbox}
+\renewcommand\arraystretch{0.85}
+%\BeforeBeginEnvironment{tabular}{\linespread{1}}
+%\AfterEndEnvironment{tabular}{\linespread{1.3}}
 \ifxetex
   \usepackage{letltxmacro}
   \setlength{\XeTeXLinkMargin}{1pt}
@@ -46,6 +52,8 @@
     }%
   }%
 \fi
+
+
 
 % use \FloatBarrier to control float environ
 \usepackage[section]{placeins}
